@@ -14,6 +14,7 @@
  */
 
 #import "GDataUtilities.h"
+
 #include <math.h>
 
 @implementation GDataUtilities
@@ -408,36 +409,20 @@ static const CFStringRef kCharsToForceEscape = CFSTR("!*'();:@&=+$,/?%#[]");
 + (NSString *)MIMETypeForFileAtPath:(NSString *)path
                     defaultMIMEType:(NSString *)defaultType {
 #ifndef GDATA_FOUNDATION_ONLY
-
   NSString *result = defaultType;
-
-  // convert the path to an FSRef
-  FSRef fileFSRef;
-  Boolean isDirectory;
-  OSStatus err = FSPathMakeRef((UInt8 *) [path fileSystemRepresentation],
-                               &fileFSRef, &isDirectory);
-  if (err == noErr) {
-
-    // get the UTI (content type) for the FSRef
-    CFStringRef fileUTI;
-    err = LSCopyItemAttribute(&fileFSRef, kLSRolesAll, kLSItemContentType,
-                              (CFTypeRef *)&fileUTI);
-    if (err == noErr) {
-
-      // get the MIME type for the UTI
-      CFStringRef mimeTypeTag;
-      mimeTypeTag = UTTypeCopyPreferredTagWithClass(fileUTI,
-                                                    kUTTagClassMIMEType);
-      if (mimeTypeTag) {
-
-        // convert the CFStringRef to an autoreleased NSString (ObjC 2.0-safe)
-        result = [(id)CFMakeCollectable(mimeTypeTag) autorelease];
-      }
-      CFRelease(fileUTI);
+  NSString *extension = [path pathExtension];
+  CFStringRef uti = UTTypeCreatePreferredIdentifierForTag(kUTTagClassFilenameExtension,
+                                                          (CFStringRef)extension,
+                                                          NULL);
+  if (uti) {
+    CFStringRef cfMIMEType = UTTypeCopyPreferredTagWithClass(uti, kUTTagClassMIMEType);
+    if (cfMIMEType) {
+      result = [[(NSString *)cfMIMEType copy] autorelease];
+      CFRelease(cfMIMEType);
     }
+    CFRelease(uti);
   }
   return result;
-
 #else // !GDATA_FOUNDATION_ONLY
 
   return defaultType;
